# ops-assist

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  evals.py  main.py  pyproject.toml
src/: agent.py
util/sql/: dashboard.sql  dashboard11.sql  dashboard13.sql  dashboard15.sql  dashboard8.sql  dashboard_2.sql
