[project]
name = "ops-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.3",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.1.3",
    "langgraph>=1.0.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-calamine>=0.6.1",
    "pyxlsb>=1.0.10",
    "streamlit>=1.52.2",
]
